# wttr

./: Cargo.toml
src/: main.rs
src/weather/: mod.rs  weathercode.rs  winddir.rs
